--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/Riksrevisjonen/noAPI/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/Riksrevisjonen/noAPI/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of noAPI is to make it easier for users to retrieve data from public Norwagian APIs. 
+The goal of noAPI is to make it easier for users to retrieve data from public Norwegian APIs. 
 
 ## Installation
 
