--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# noAPI
+# noAPI <a href="https://riksrevisjonen.github.io/noAPI/"><img src="man/figures/logo.png" align="right" height="139" /></a>
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/Riksrevisjonen/noAPI/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/Riksrevisjonen/noAPI/actions/workflows/R-CMD-check.yaml)
@@ -50,4 +50,8 @@ For a full list of available functions please refer to the [package documentatio
 
 ## Getting help
 
-If you encounter a bug or want to submit a feature request please file an issue on [GitHub](https://github.com/Riksrevisjonen/noAPI/issues). We kindly ask you to include a minimal reproducible example when possible. For other questions please reach out to the package authors. 
+If you encounter a bug or want to submit a feature request please file an issue on [GitHub](https://github.com/Riksrevisjonen/noAPI/issues). We kindly ask you to include a minimal reproducible example when possible. For other questions please reach out to the package authors.
+
+## Acknowledgments
+
+The ship used in noAPIs logo is based on a 3D model of the Norwegian Oseberg Viking Ship originally created by Dane Ericksen. The conversion to a 2D black-and-white model was done by the package authors. Ericksen's work is licensed under [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).
