Fix issues from devtools check + spelling

--- a/README.Rmd
+++ b/README.Rmd
@@ -52,6 +52,6 @@ For a full list of available functions please refer to the [package documentatio
 
 If you encounter a bug or want to submit a feature request please file an issue on [GitHub](https://github.com/Riksrevisjonen/noAPI/issues). We kindly ask you to include a minimal reproducible example when possible. For other questions please reach out to the package authors.
 
-## Acknowledgments
+## Acknowledgements
 
 The ship used in noAPIs logo is based on a 3D model of the Norwegian Oseberg Viking Ship originally created by Dane Ericksen. The conversion to a 2D black-and-white model was done by the package authors. Ericksen's work is licensed under [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).
